# interpolation

./: .travis.yml  Cargo.toml  README.md
benches/: ease.rs
src/: ease.rs  lerp.rs  lib.rs  spatial.rs
